--- a/YXK3FZ/RYGYL/RP/from/FRMRSJYB.resx
+++ b/YXK3FZ/RYGYL/RP/from/FRMRSJYB.resx
@@ -173,28 +173,32 @@
 * 读取每日成本EXCEL:   系统手动导入每日成本需要用到的EXCEL模板,在你本地电脑编辑好成本模板EXCEL文件保存一个文件名,通过该功能选择到对应的模板.
 * 手动导入每日成本   :   读取每日成本EXCEL 后 点该功能正式导入到数据库表中
 * 自动导入每日成本   :   系统自动导入成本 ,这个功能是和手动导入每日成本相对应的.
-* 导出经营表数据      :   当点击"经营表查询"按钮后,查询出来的结果集  在这里导出成EXCEL文档
-* 导出每日成本         :   
+* 导出经营表数据    :   当点击"经营表查询"按钮后,查询出来的结果集  在这里导出成EXCEL文档
+* 导出每日成本       :   当点击"成本查询"按钮后,查询出来的结果集  在这里导出成EXCEL文档
+* 经营表查询   :查询经营表数据
+* 回款查询 :查询回款数据
+* 成本查询: 查询核算后的物料成本
 
 
+过滤条件:
 
+*日期: 按天取数   不支持跨日期查询
 
-
-
-
-
-
-
---1 导入每日成本单价，重复导会覆盖 ,导完后才能点"成本查询"查询到对应的成本
---2 收入=数量*销售单价/系数 成本=数量*成本单价/系数 部门不一样,系数不同,系数可在明细表中查询
---3 鼠标双击表１的各列可以显示明细信息 分别如下:
-     日期列 -----&gt;回款信息
-     日期列 -----&gt;回款信息
-     日期列 -----&gt;回款信息
-     日期列 -----&gt;回款信息
-     日期列 -----&gt;回款信息
-     日期列 -----&gt;回款信息
-     日期列 -----&gt;回款信息
+内容:
+* 导入每日成本单价，重复导会覆盖 ,导完后才能点"成本查询"查询到对应的成本
+* 收入=数量*销售单价/系数 成本=数量*成本单价/系数 部门不一样,系数不同,系数可在明细表中查询
+*鼠标双击表中各列,可以查询到明细值,目前支持双击列有以下:
+    A经营表格
+     日期列 -----&gt;部门经营明细
+     头数列 -----&gt;头数明细
+     数量列 -----&gt;数量明细
+     收入列 -----&gt;收入明细
+     成本列 -----&gt;成本明细
+     
+B回款表格
+    暂无
+C成本表格
+    暂无
 
                 </value>
   </data>
