日成本添加一列使用说明
日成本添加一列使用说明

--- a/YXK3FZ/RYGL/frmCostQueryForm.resx
+++ b/YXK3FZ/RYGL/frmCostQueryForm.resx
@@ -414,4 +414,39 @@
   <metadata name="bdsFengGe.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>162, 17</value>
   </metadata>
+  <data name="richTextBox2.Text" xml:space="preserve">
+    <value>             
+屠宰车间	列名	取数说明	
+	产品名称	取仓库是屠宰产品入库单	
+	肉品分摊标准	基础资料-成本比例系数	
+	肉品分摊数量	肉品分摊率标准*完工数量	
+	肉品分摊率	肉品分摊数量（单个）/肉品分摊数量（总）	
+	人工分摊标准	基础资料-人工比例系数	
+	人工分摊数量	人工分摊标准*完工数量	
+	人工分摊率	人工分摊数量（单个）/人工分摊数量（总）	
+	包装分摊标准	基础资料-包装比例系数	
+	包装分摊数量	包装分摊标准*完工数量	
+	包装分摊率	包装分摊数量（单个）/人工分摊数量（总）	
+	气调分摊标准	基础资料-气调比例系数	
+	气调分摊数量	气调分摊标准*完工数量	
+	气调分摊率	气调分摊数量（单个）/气调分摊数量（总）	
+	完工数量	取仓库是屠宰产品入库单上数量	
+	单位成本	完工金额/完工数量	
+	完工金额	材料成本小计+直接人工+制造费用+气调费用	
+	生猪领用	总数：云睿屠宰结算表金额*0.91+代宰头数*代宰系数（单价36）+财务调整值 单品：总数*肉品分摊率	
+	物资采购费用	基础资料	
+	屠宰暂存库	0	
+	包装物	基础资料	
+	材料成本小计	生猪领用+物资采购费用+屠宰暂存库+包装物	
+	直接人工	基础资料	
+	制造费用	基础资料	
+	气调费用	基础资料	
+			
+排酸车间	完工数量	取仓库是排酸车间入库单上数量	
+	生猪领用	总数：生产领料*单价 的汇总值 （自制：单价取上个车间的产品成本，外购：取一周内最后一条外购入库成本） 单品：总数*肉品分摊率	
+			
+			
+说明		因业务核算问题，对于每日排酸成品仓入库的冷鲜带蹄白条A级（代码7.1.01.01.00685,7.1.01.01.00686）和冷鲜带蹄黑猪A级
+（代码8.8.01.00020）的单位成本，取数于每日外购产品仓入库的冷鲜白条1级（代码8.8.01.00030）和冷鲜黑猪白条1级（8.8.01.00040）的平均单价	</value>
+  </data>
 </root>
